--- a/workspace/GTAcampuS/res/layout/splashscr.xml
+++ b/workspace/GTAcampuS/res/layout/splashscr.xml
@@ -1,66 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="116dp"
-        android:src="@drawable/nitc" />
-
-    <ProgressBar
-        android:id="@+id/progressBar1"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/imageView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="117dp" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="90dp"
-        android:textColor="#F00"
-        android:textStyle="bold"
-        android:text="GTAcampuS"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/textView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp"
-        android:text="Developed by Godly T.Alias"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:text="Copyright © 2013"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+    android:layout_width="400dp"
+    android:layout_height="350dp" 
+    android:background="#00000000">
+    
+      
+     <ImageView
+         android:id="@+id/appimage"
+         android:layout_width="300dp"
+         android:layout_height="180dp"
+         android:layout_centerHorizontal="true"
+         android:layout_alignParentTop="true"
+         android:layout_marginTop="30dp"
+         android:src="@drawable/sgtacampus" />
     
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/textView3"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:text="All rights reserved"
+        android:layout_marginBottom="10dp"
+        android:textColor="#888"
+        android:text="@string/rights"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+    
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/textView4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:textColor="#888"
+        android:text="@string/copyright"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+    
+    
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/textView3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:textColor="#888"
+        android:text="@string/developer"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+<!--     
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/textView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
+        android:text="@string/app_name"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#aa00aa00"
+        android:textStyle="bold" /> -->
+    
+
+
+     
+          <ProgressBar
+        android:id="@+id/loadingbar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_above="@id/textView2"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:indeterminateDuration="2000"
+        android:layout_marginBottom="10dp" />
 
 </RelativeLayout>
