--- a/workspace/GTAcampuS/res/anim/magfade.xml
+++ b/workspace/GTAcampuS/res/anim/magfade.xml
@@ -14,5 +14,15 @@ android:fromXScale=".5"
 android:fromYScale=".5"
 android:toXScale="1.2"
 android:toYScale="1.2"
-android:duration="2000" />
+android:duration="2000" 
+/>
+<scale
+    android:pivotX="50%"
+    android:pivotY="50%"
+   android:startOffset="2000"
+   android:fromXScale="1.2"
+    android:fromYScale="1.2"
+    android:toXScale="1.0"
+    android:toYScale="1.0"
+    android:duration="2000"/>
 </set>
