--- a/workspace/GTAcampuS/res/layout/activity_campus.xml
+++ b/workspace/GTAcampuS/res/layout/activity_campus.xml
@@ -1,176 +1,40 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".CampusActivity"
+<RelativeLayout  xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:animateLayoutChanges="true"
-    android:background="#333"
-    android:layout_width="match_parent"
-    android:layout_height="fill_parent">
-    
-    <RelativeLayout
+    android:background="#22000000"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".CampusActivity" >
+
+        <AnalogClock
+        android:id="@+id/analogClock1"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@android:id/list"
+        android:layout_marginLeft="98dp" />
+        
+    <ListView
+        android:id="@android:id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" >
-        
-         <AnalogClock
-        android:id="@+id/analogClock1"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
-        
-         <ImageButton
-             android:id="@+id/imageButton1"
-             android:layout_width="70dp"
-             android:layout_height="70dp"
-             android:layout_alignTop="@id/analogClock1"
-             android:layout_marginLeft="15dp"
-             android:onClick="Calculator"
-             android:src="@drawable/calculator_icon" />
+        android:layout_marginLeft="140dp"
+        android:layout_toRightOf="@id/analogClock1"
+        android:background="@drawable/ic_launcher"
+        android:drawSelectorOnTop="false"
+        android:divider="#333"
+        android:dividerHeight="1dp"
+        style="bold"
+        android:listSelector="#d70"
+        android:smoothScrollbar="false" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/imageButton1"
-        android:layout_below="@id/imageButton1"
+    </ListView>
 
-        android:textColor="#FFF"
-        android:text="Calculator"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-    
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_alignTop="@id/imageButton1"
-        android:layout_marginLeft="50dp"
-        android:layout_toRightOf="@id/imageButton1"
-        android:onClick="slotdisp"
-        android:src="@drawable/slot" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/imageButton2"
-        android:layout_marginLeft="16dp"
-        android:layout_below="@id/imageButton2"
-       android:textColor="#FFF"
-        android:text="Slots"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-    
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_below="@id/imageButton1"
-        android:layout_alignLeft="@id/imageButton1"
-        android:layout_marginTop="60dp"
-        android:onClick="coursefn"
-        android:src="@drawable/ic_slot" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/imageButton3"
-        android:layout_below="@id/imageButton3"
- 
-      android:textColor="#FFF"
-        android:text="Add Course"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    
-     <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_alignLeft="@id/imageButton2"
-        android:layout_below="@id/imageButton2"
-        android:layout_marginTop="60dp"
-        android:onClick="coursecheck"
-        android:src="@drawable/course" />
-     
-     
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/imageButton4"
-        android:layout_below="@id/imageButton4"
-        android:layout_marginLeft="10dp"
-        android:textColor="#FFF"
-        android:text="Courses"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-    
-
-    
-     <ImageButton
-        android:id="@+id/imageButton5"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_below="@id/imageButton3"
-        android:layout_alignLeft="@id/imageButton1"
-        android:layout_marginTop="60dp"
-        android:onClick="notes"
-        android:src="@drawable/ic_note" />
-     
-         <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/imageButton1"
-        android:layout_below="@id/imageButton5"
-        android:layout_marginLeft="14dp"
-        android:textColor="#FFF"
-        android:text="Notes"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-      
-    
-    
-     <ImageButton
-        android:id="@+id/imageButton6"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_alignLeft="@id/imageButton2"
-        android:layout_below="@id/imageButton4"
-        android:layout_marginTop="60dp"
-        android:onClick="bunk"
-        android:src="@drawable/ic_bunk" />
-     
-     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageButton2"
-        android:layout_marginLeft="-6dp"
-		android:layout_below="@id/imageButton6"
-		android:textColor="#FFF"
-        android:text="Bunk-O-meter"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-     
-     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageButton7"
-        android:layout_below="@id/imageButton7"
-        android:layout_marginLeft="12dp"
-		android:textColor="#FFF"
-        android:text="Alarm"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-     <ImageButton
-         android:id="@+id/imageButton7"
-         android:layout_width="70dp"
-         android:layout_height="70dp"
-         android:layout_alignTop="@+id/imageButton2"
-         android:layout_centerHorizontal="true"
-         android:onClick="alarm"
-         android:src="@drawable/ic_bunk" />
-
-</RelativeLayout></ScrollView>
+</RelativeLayout>
