--- a/workspace/GTAcampuS/res/values/styles.xml
+++ b/workspace/GTAcampuS/res/values/styles.xml
@@ -16,5 +16,6 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    <style name="ListTheme" parent="android:Theme.Black"></style>
 
 </resources>
