--- a/workspace/GTAcampuS/res/layout/activity_campus.xml
+++ b/workspace/GTAcampuS/res/layout/activity_campus.xml
@@ -3,6 +3,12 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@android:drawable/screen_background_dark"
+        android:orientation="vertical"
+        android:id="@+id/mainlayout">
+
+<LinearLayout
+    	android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <AnalogClock
@@ -10,10 +16,12 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginLeft="50dp" />
+
+        
+
     <ListView
         android:layout_marginLeft="50dp"
         android:id="@android:id/list"
-        style="@style/ListTheme"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/book"
@@ -25,4 +33,27 @@
 
     </ListView>
 
+</LinearLayout >
+
+<LinearLayout android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+    
+    <ImageButton
+            android:id="@+id/imageButton1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/ic_close" 
+            android:onClick="exit"/>
+    
+    <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/about" 
+            android:onClick="about"/>
+    
+</LinearLayout>
 </LinearLayout>
