--- a/workspace/GTAcampuS/res/values/styles.xml
+++ b/workspace/GTAcampuS/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -28,5 +28,10 @@
 	<item name="android:drawablePadding">0dp</item>
 	<item name="android:layout_width">fill_parent</item>    
   </style>
+    <style name="mytext" parent="@android:style/TextAppearance">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">center</item>
+    </style>
 
 </resources>
